Study page - first version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="contacts">Контакты</string>
     <string name="full_name">ФИО:\nСатункин\nВладимир\nВитальевич</string>
     <string name="about_text">Студент бакалавриата, увлекающийся программированием, подробности далее...</string>
+    <string name="urfu">Уральский Фудуральный Университет (УрФУ)</string>
 </resources>
