recyclerview first version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,15 @@
     <string name="plans">Планы на будущее</string>
     <string name="contacts">Контакты</string>
     <string name="full_name">ФИО:\nСатункин\nВладимир\nВитальевич</string>
-    <string name="about_text">Студент бакалавриата, увлекающийся программированием, подробности далее...</string>
+    <string name="about_text">Студент бакалавриата, увлекающийся программированием, подробности далее…</string>
     <string name="urfu">Уральский Фудуральный Университет (УрФУ)</string>
+    <string name="more">Подробнее</string>
+    <string name="study_text">Институт (факультет): Институт радиоэлектроники и информационных технолоий ИРИТ-РТФ\nНаправление: 09.03.02 Информационные системы и технологии в приборостроении и телекоммуникациях</string>
+    <string name="interest_header">Мои профессиональные интересы</string>
+    <string name="interest_text_1">Я люблю программирование и интересуюсь следующими направлениями:</string>
+    <string-array name="interests_list">
+        <item>Android разработка</item>
+        <item>Backend разработка</item>
+        <item>Frontend разработка</item>
+    </string-array>
 </resources>
