recyclerview first final version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,9 @@
     <string name="study_text">Институт (факультет): Институт радиоэлектроники и информационных технолоий ИРИТ-РТФ\nНаправление: 09.03.02 Информационные системы и технологии в приборостроении и телекоммуникациях</string>
     <string name="interest_header">Мои профессиональные интересы</string>
     <string name="interest_text_1">Я люблю программирование и интересуюсь следующими направлениями:</string>
-    <string-array name="interests_list">
+    <!--<string-array name="interests_list">
         <item>Android разработка</item>
         <item>Backend разработка</item>
         <item>Frontend разработка</item>
-    </string-array>
+    </string-array>-->
 </resources>
