--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyBusinessCard</string>
+    <string name="app_name">My visit Card</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -7,11 +7,6 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-
-    <string name="home_second">Home Second</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="about">Обо мне</string>
     <string name="study">Моя учёба</string>
     <string name="interests">Мои интересы</string>
@@ -31,7 +26,7 @@
     <string name="c">C++</string>
     <string name="sql">SQL</string>
     <string name="github_link"><a href='https://github.com/dartrhevan'>Здесь вы можете посмотреть примеры моих программ на этих и не только языках</a></string>
-    <string name="plans_text">Чётких планов уменя пока нет: скорее всего продолжу обучение, здорово, если получиться подрабатывать по ходу, а ещё хотелось бы попасть на стажировку в Яндекс...</string>
+    <string name="plans_text">Чётких планов уменя пока нет: скорее всего продолжу обучение, здорово, если получиться подрабатывать по ходу, а ещё хотелось бы попасть на стажировку в Яндекс…</string>
     <string name="question">\?</string>
     <string name="contacts_text">Если вам понравилось данное приложение или заинтересовали навыки, которые я здесь упомянул, либо один из моих проектов, вот моя электронная почта: vovasatunkin@gmail.com\nИ на всякий случай ещё раз ссылка на GitHub:</string>
     <string name="name">Сатункин Владимир</string>
